[build-system]
requires = ["hatchling", "requests" , "aiohttp"]
build-backend = "hatchling.build"

[project]
name = "shardai"
version = "0.0.2"
authors = [
  { name="Puzzy124", email="contact@shard-ai.xyz" },
  { name="QuartzWarrior", email="contact@quartzwarrior.xyz" },
]
description = "A package for ShardAI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Puzzy124/shard-api-client"
Issues = "https://github.com/Puzzy124/shard-api-client/issues"